# pointer

./: CLAUDE.md  Cargo.toml  README.md  pointer.1
.github/workflows/: ci.yml  release.yml
src/: ai.rs  app.rs  archive.rs  command.rs  config.rs  entry.rs  git.rs  help.rs  highlight.rs  image.rs  main.rs  marks.rs  ops.rs  plugin.rs  preview.rs  search.rs  ssh.rs  tabs.rs  undo.rs
