[package]
name = "pointer"
version = "0.1.1"
edition = "2021"
authors = ["Geir Isene <g@isene.com>"]
description = "Fast terminal file manager. Feature clone of RTFM, built on crust."
license = "Unlicense"
repository = "https://github.com/isene/pointer"

[dependencies]
crust = { path = "../crust" }
glow = { path = "../glow" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
