[package]
name = "pointer"
version = "0.1.32"
edition = "2021"
authors = ["Geir Isene <g@isene.com>"]
description = "Fast terminal file manager. Feature clone of RTFM, built on crust."
license = "Unlicense"
repository = "https://github.com/isene/pointer"

[dependencies]
crust = { version = "0.1", path = "../crust", package = "fe2o3-crust" }
glow = { version = "0.1", path = "../glow", package = "fe2o3-glow" }
# Note: fe2o3-crust exports as "crust", fe2o3-glow exports as "glow" via [lib] name
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
